Shenandoah: reserve identity-hash headroom only for fresh objects so region-sized TLABs are not misrouted as humongous